tests/ui/type-reference-ampersand.stderr
error: no rules expected the token `&`
 --> $DIR/tests/ui/type-reference-ampersand.rs:5:16
  |
5 |     input = [{ & }]
  |                ^ no rules expected this token in macro call
